# genres

./: .gitignore  README.md  pyproject.toml
genres/: __main__.py  args.py  chart.py  lastfm.py
tests/: test_genres.py
