[tool.poetry]
name = "genres"
version = "0.1.0"
description = "A script that collects listening history for a given last.fm user and uses Spotify to determine genres for the artists, then spits out a chart."
authors = ["Kent Daleng <kent.daleng@nav.no>"]

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.17.1"
pylast = "^4.2.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
